ci: remove java options that cause JVM creation failure in CI